# demangle

./: README.md
c-export/: CMakeLists.txt  Demangle.cpp  Demangle.h
cli/: CMakeLists.txt  Demangle.cpp
csharp/: Demangle.sln
csharp/Demangle/: DemangleStatus.cs  Demangler.cs  MSDemangleFlags.cs  Native.cs
csharp/DemangleNet/: DemangleNet.csproj  Program.cs
